# investment-trade-predict

./: .env.sample  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  Pipfile  README.md  app.py  docker-compose.yml  setup.cfg  setup.py  test_investment_machine_predict_prices.py
investment_fx_predict/: app_datetime.py  app_logging.py  app_s3.py  predict_1.py  preprocess_1.py  preprocess_2.py  preprocess_3.py  preprocess_4.py  test_trade_1.py  test_trade_2.py  test_trade_base.py
investment_machine_predict_prices/: __init__.py
investment_stocks_predict_trend/: __init__.py  agent_1.py  agent_10.py  agent_11.py  agent_12.py  agent_12_1.py  agent_2.py  agent_3.py  agent_4.py  agent_5.py  agent_6.py  agent_7.py  agent_8.py  agent_9.py  app.py  app_logging.py  app_s3.py  backtest_1.py  backtest_2.py  backtest_3.py  backtest_4.py  backtest_5.py  backtest_6.py  predict_1.py  predict_2.py  predict_3.py  predict_4.py  predict_5.py  predict_6.py  predict_7.py  predict_8.py  predict_base.py  preprocess.py  preprocess_1.py  preprocess_2.py  preprocess_3.py  preprocess_4.py  preprocess_5.py  preprocess_6.py  preprocess_7.py  (+19 more)
tests/: context.py  test_all.py
