[metadata]
name = investment-machine_predict-prices
version = attr: investment-machine_predict-prices.VERSION
url = https://github.com/u6k/investment-machine_predict-prices
author = u6k
author_email = u6k.apps@gmail.com
description = Predict stock prices
long_description = file: README.md
license = MIT License

