[metadata]
name = investment_stocks_predict_trend
version = attr: investment_stocks_predict_trend.VERSION
url = https://github.com/u6k/investment-stocks-predict-trend
author = u6k
author_email = u6k.apps@gmail.com
description = Predict stocks trend
long_description = file: README.md
license = MIT License

[options]
packages = find:

[flake8]
max-line-length = 160
